--- a/package.json
+++ b/package.json
@@ -9,8 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "firebase": "^11.7.1",
+    "firebase-admin": "^13.3.0",
+    "micro": "^10.0.1",
+    "next": "15.3.2",
+    "openai": "^4.98.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "next": "15.3.2"
+    "stripe": "^18.1.0"
   }
 }
