--- a/package.json
+++ b/package.json
@@ -9,13 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "adm-zip": "^0.5.16",
     "firebase": "^11.7.1",
     "firebase-admin": "^13.3.0",
+    "jsforce": "^3.8.2",
+    "jszip": "^3.10.1",
     "micro": "^10.0.1",
     "next": "15.3.2",
     "openai": "^4.98.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "stripe": "^18.1.0"
+    "stripe": "^18.1.0",
+    "xml2js": "^0.6.2"
   }
 }
