--- a/package.json
+++ b/package.json
@@ -9,17 +9,29 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@google-cloud/tasks": "^6.2.0",
+    "@salesforce-ux/design-system": "^2.27.1",
     "adm-zip": "^0.5.16",
+    "chardet": "^2.1.0",
     "firebase": "^11.7.1",
-    "firebase-admin": "^13.3.0",
+    "firebase-admin": "^13.4.0",
+    "firebase-functions": "^6.3.2",
+    "fs": "^0.0.1-security",
+    "iconv-lite": "^0.6.3",
     "jsforce": "^3.8.2",
     "jszip": "^3.10.1",
+    "markdown-pdf": "^11.0.0",
+    "marked": "^16.0.0",
     "micro": "^10.0.1",
     "next": "15.3.2",
     "openai": "^4.98.0",
+    "puppeteer": "^24.11.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "stripe": "^18.1.0",
     "xml2js": "^0.6.2"
+  },
+  "devDependencies": {
+    "postcss-preset-env": "^10.2.3"
   }
 }
